# Project2

./: CMakeLists.txt  README.txt  my_test.cpp
lib/: Brute.cpp  Brute.h  CMakeLists.txt  Frechet_unittest.cpp  Frechete_unittest.cpp  HyperImpl.cpp  HyperImpl.h  Hypercube.cpp  Hypercube.h  Hypercube_unittest.cpp  LSH.cpp  LSH.h  LSH_unittest.cpp  LSHimpl.cpp  LSHimpl.h  assignment.cpp  assignment.h  cluster.cpp  cluster.h  hash.cpp  hash.h  hashtable.cpp  hashtable.h  input.h  kmeans.cpp  kmeans.h  maths.cpp  maths.h  output.cpp  output.h  parser.cpp  parser.h  point.cpp  point.h
lib/Fred/: CMakeLists.txt  types.hpp
lib/cluster/: CMakeLists.txt  assignment.cpp  assignment.h  cluster.cpp  cluster.h  kmeans.cpp  kmeans.h
lib/common/: CMakeLists.txt  Distance_unittest.cpp  global.cpp  global.h  input.cpp  input.h  maths.h  output.cpp  output.h  parser.cpp  point.cpp
lib/search/: CMakeLists.txt  hash.cpp  hash.h  hashtable.cpp  hashtable.h
lib/search/Brute/: Brute.cpp  Brute.h  Brute_unittest.cpp
lib/search/Hypercube/: HyperImpl.cpp  HyperImpl.h  Hypercube.cpp  Hypercube.h
lib/search/LSH/: Frechet_unittest.cpp  LSH.cpp  LSH.h  LSH_unittest.cpp  LSHimpl.cpp  LSHimpl.h
src/: CMakeLists.txt  Clustering.cpp  Hypercube_driver.cpp  LSH.cpp  LSH_driver.cpp  cluster.cpp  hypercube.cpp  search.cpp
test/: demo.txt  errTest  errTestQuery  query.csv
